评论功能基本实现

--- a/LHblog/templates/Lblog/base.html
+++ b/LHblog/templates/Lblog/base.html
@@ -178,7 +178,10 @@
         </div><!--//row-->
     </div><!--//masonry-->
     
-    <!-- ******FOOTER****** --> 
+    <!-- ******FOOTER****** -->
+    <div class="navbar-fixed-bottom" >
+        <a href="#top"> <i class="fa fa-download" class="back-to-top" style="float: right;width: 13%;margin-bottom: 10px" >顶部</i></a>
+    </div>
     <footer class="footer">
         <div class="container text-center">
                 <small class="copyright">李恒的博客</small>
