--- a/LHblog/templates/Lblog/index.html
+++ b/LHblog/templates/Lblog/index.html
@@ -42,7 +42,7 @@
                                     {% endif %}
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                    <h3 class="title"><a href="{{ article.get_pk_url }}" target="_blank">{{ article.title}}</a></h3>
+                                    <h3 class="title"><a href="{{ article.get_absolute_url }}" target="_blank">{{ article.title}}</a></h3>
                                     <p>{{ article.excerpt}}</p>
                                     <p style="color:#8B8386"><span><i class="fa fa-comments"></i> 4</span> &nbsp <span><i class="fa fa-eye"></i> {{ article.views }}</span>&nbsp &nbsp &nbsp  <span><i class="fa fa-calendar"></i> {{ article.create_time |date:"Y-m-d H:i:s"}}</span></p>
                                 </div><!--//desc-->
@@ -61,7 +61,7 @@
                         <div class="content">
                             {% for article in art_lsit %}
                             <div class="item">
-                                <h3 class="title"><a href="{{ article.get_pk_url }}">{{ article.title}}</a> <span class="label label-theme">{{ article.tags }}</span></h3>
+                                <h3 class="title"><a href="{{ article.get_absolute_url }}">{{ article.title}}</a> <span class="label label-theme">{{ article.tags }}</span></h3>
                                 <p class="summary">{{ article.excerpt}}</p>
                                 <p style="color:#8B8386"><span><i class="fa fa-comments"></i> 4</span> &nbsp <span><i class="fa fa-eye"></i> {{ article.views }}</span>&nbsp &nbsp &nbsp  <span><i class="fa fa-calendar"></i> {{ article.create_time |date:"Y-m-d H:i:s"}}</span></p>
                             </div><!--//item-->
