--- a/LHblog/static/Lblog/assets/css/styles.css
+++ b/LHblog/static/Lblog/assets/css/styles.css
@@ -533,3 +533,12 @@ iframe {
     width: 1360px;
   }
 }
+#comment_text textarea{
+    height:20%;
+    width:100%;
+}
+#comment_text textarea{
+    height:1000px;
+    width:1000px;
+    background:red;
+}
