评论功能基本实现2

--- a/LHblog/templates/Lblog/index.html
+++ b/LHblog/templates/Lblog/index.html
@@ -44,7 +44,7 @@
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="{{ article.get_absolute_url }}" target="_blank">{{ article.title}}</a></h3>
                                     <p>{{ article.excerpt}}</p>
-                                    <p style="color:#8B8386"><span><i class="fa fa-comments"></i> 4</span> &nbsp <span><i class="fa fa-eye"></i> {{ article.views }}</span>&nbsp &nbsp &nbsp  <span><i class="fa fa-calendar"></i> {{ article.create_time |date:"Y-m-d H:i:s"}}</span></p>
+                                    <p style="color:#8B8386"><span><i class="fa fa-comments"></i> {{ article.comment_set.count }}</span> &nbsp <span><i class="fa fa-eye"></i> {{ article.views }}</span>&nbsp &nbsp &nbsp  <span><i class="fa fa-calendar"></i> {{ article.create_time |date:"Y-m-d H:i:s"}}</span></p>
                                 </div><!--//desc-->
                             </div><!--//item-->
                             {% endfor %}
@@ -63,7 +63,7 @@
                             <div class="item">
                                 <h3 class="title"><a href="{{ article.get_absolute_url }}">{{ article.title}}</a> <span class="label label-theme">{{ article.tags }}</span></h3>
                                 <p class="summary">{{ article.excerpt}}</p>
-                                <p style="color:#8B8386"><span><i class="fa fa-comments"></i> 4</span> &nbsp <span><i class="fa fa-eye"></i> {{ article.views }}</span>&nbsp &nbsp &nbsp  <span><i class="fa fa-calendar"></i> {{ article.create_time |date:"Y-m-d H:i:s"}}</span></p>
+                                <p style="color:#8B8386"><span><i class="fa fa-comments"></i> {{ article.comment_set.count }}</span> &nbsp <span><i class="fa fa-eye"></i> {{ article.views }}</span>&nbsp &nbsp &nbsp  <span><i class="fa fa-calendar"></i> {{ article.create_time |date:"Y-m-d H:i:s"}}</span></p>
                             </div><!--//item-->
                             {% endfor %}
                             <a class="btn btn-cta-secondary" href="#">More on CoderWall <i class="fa fa-chevron-right"></i></a>
