--- a/LHblog/templates/Lblog/list.html
+++ b/LHblog/templates/Lblog/list.html
@@ -18,7 +18,7 @@
                             <div class="item">
                                 <h3 class="title"><a href="{{ article.get_absolute_url }}">{{ article.title}}</a> <span class="label label-theme">{{ article.category.name }}{{ article.tags.name }}</span></h3>
                                 <p class="summary">{{ article.excerpt}}</p>
-                                <p style="color:#8B8386"><span><i class="fa fa-comments"></i> 4</span> &nbsp <span><i class="fa fa-eye"></i> {{ article.views }}</span>&nbsp &nbsp &nbsp  <span><i class="fa fa-calendar"></i> {{ article.create_time |date:"Y-m-d H:i:s"}}</span></p>
+                                <p style="color:#8B8386"><span><i class="fa fa-comments"></i> &nbsp{{ article.comment_set.count }}</span> &nbsp <span><i class="fa fa-eye"></i> {{ article.views }}</span>&nbsp &nbsp &nbsp  <span><i class="fa fa-calendar"></i> {{ article.create_time |date:"Y-m-d H:i:s"}}</span></p>
                             </div><!--//item-->
 
                                 {% empty %}
