--- a/LHblog/templates/Lblog/detail.html
+++ b/LHblog/templates/Lblog/detail.html
@@ -38,6 +38,7 @@
                         <br/>
                         <div class="commit-list">
                         <ul class="list-group">
+                            <a href="">Google+</a>
                             <li class="list-group-item active" >评论列表</li>
                             {% for comment in comment_list  %}
                             <li class="list-group-item" style="height:100%">
