--- a/LHblog/templates/Lblog/base.html
+++ b/LHblog/templates/Lblog/base.html
@@ -57,13 +57,16 @@
                 <!-- menu section -->  
                 <div class="collapse navbar-collapse navbar-ex1-collapse">  
                     <ul class="nav navbar-nav navbar-left">  
-                        <li><a href="{% url 'blog:index' %} ">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="#">Products</a></li>  
-                        <li><a href="#">Blog</a></li>  
-                        <li><a href="#">Support</a></li>  
+                        <li><a href="{% url 'blog:index' %} ">首页</a></li>
+
                     </ul>
-                     <form action="" class="navbar-form navbar-right">  
+
+                     <form action="" class="navbar-form navbar-right">
+                         {{request.user.first_name}}
+                         {% if user.is_authenticated %}
+                         <a href="{% url 'logout' %}?next={{ request.path }}">注销</a>&nbsp;&nbsp;
+                         {% endif %}
+
                         <input type="text" placeholder="搜索" class="form-control">
                         <button type="submit" class="btn btn-info btn-search">
                             <span class="glyphicon glyphicon-search"></span>
