--- a/LHblog/templates/Lblog/index.html
+++ b/LHblog/templates/Lblog/index.html
@@ -34,12 +34,13 @@
                         <div class="content">
 
                             <hr/>
-                            {% for article in img_art_list %}
+                            {% for article in art_List %}
+                            {% if article.images %}
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" href="#website-templates/responsive-bootstrap-theme-mobile-apps-atom/" target="_blank">
-                                    {% if article.images %}
+
                                     <img class="img-responsive project-image" style="width:240px;height: 150px" src="{{ article.images.url | default_if_none:'#' }}" />
-                                    {% endif %}
+
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="{{ article.get_absolute_url }}" target="_blank">{{ article.title}}</a><span class="label label-theme">{% for tag in article.tags.all %}{{ tag.name }}{% endfor %}</span></h3>
@@ -47,6 +48,7 @@
                                     <p style="color:#8B8386"><span><i class="fa fa-comments"></i> {{ article.comment_set.count }}</span> &nbsp <span><i class="fa fa-eye"></i> {{ article.views }}</span>&nbsp &nbsp &nbsp  <span><i class="fa fa-calendar"></i> {{ article.create_time |date:"Y-m-d H:i:s"}}</span></p>
                                 </div><!--//desc-->
                             </div><!--//item-->
+                                 {% endif %}
                             {% endfor %}
 
                         </div><!--//content-->
@@ -59,12 +61,15 @@
                     <div class="section-inner">
                         <h2 class="heading">Other Projects</h2>
                         <div class="content">
-                            {% for article in art_lsit %}
+                            {% for article in art_List %}
+                                 {% if not article.images %}
                             <div class="item">
                                 <h3 class="title"><a href="{{ article.get_absolute_url }}">{{ article.title}}</a> {% for tag in article.tags.all %}<span class="label label-theme">{{ tag.name }}</span>&nbsp;{% endfor %}</h3>
                                 <p class="summary">{{ article.excerpt}}</p>
                                 <p style="color:#8B8386"><span><i class="fa fa-comments"></i> {{ article.comment_set.count }}</span> &nbsp <span><i class="fa fa-eye"></i> {{ article.views }}</span>&nbsp &nbsp &nbsp  <span><i class="fa fa-calendar"></i> {{ article.create_time |date:"Y-m-d H:i:s"}}</span></p>
                             </div><!--//item-->
+                                 {% endif %}
+
                             {% endfor %}
                             <a class="btn btn-cta-secondary" href="#">More on CoderWall <i class="fa fa-chevron-right"></i></a>
 
