--- a/LHblog/templates/Lblog/base.html
+++ b/LHblog/templates/Lblog/base.html
@@ -32,7 +32,11 @@
   
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>  
   
-
+ <style>
+        span.highlighted {
+            color: red;
+        }
+    </style>
 
     
 </head> 
@@ -61,13 +65,13 @@
 
                     </ul>
 
-                     <form action="" class="navbar-form navbar-right">
+                     <form action=" {% url 'haystack_search' %}"  method="get" class="navbar-form navbar-right">
                          {{request.user.first_name}}
                          {% if user.is_authenticated %}
                          <a href="{% url 'logout' %}?next={{ request.path }}">注销</a>&nbsp;&nbsp;
                          {% endif %}
 
-                        <input type="text" placeholder="搜索" class="form-control">
+                        <input type="text"  name="q" placeholder="搜索" class="form-control">
                         <button type="submit" class="btn btn-info btn-search">
                             <span class="glyphicon glyphicon-search"></span>
                         </button>
