--- a/LHblog/templates/Lblog/index.html
+++ b/LHblog/templates/Lblog/index.html
@@ -65,7 +65,7 @@
                                  {% if not article.images %}
                             <div class="item">
                                 <h3 class="title"><a href="{{ article.get_absolute_url }}">{{ article.title}}</a> {% for tag in article.tags.all %}<span class="label label-theme">{{ tag.name }}</span>&nbsp;{% endfor %}</h3>
-                                <p class="summary">{{ article.excerpt}}</p>
+                                <p class="summary">{% if not article.excerpt %} {{ article.content | truncatewords:3 }} {% endif %} {{ article.excerpt}}</p>
                                 <p style="color:#8B8386"><span><i class="fa fa-comments"></i> {{ article.comment_set.count }}</span> &nbsp <span><i class="fa fa-eye"></i> {{ article.views }}</span>&nbsp &nbsp &nbsp  <span><i class="fa fa-calendar"></i> {{ article.create_time |date:"Y-m-d H:i:s"}}</span></p>
                             </div><!--//item-->
                                  {% endif %}
